--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ script: python grade.py PA6Main PublicTestCases --outpre pa6 --inext in
 
 notifications:
   on_success: always
-  email: your.github.email@whatever.domain
+  email:
+        ajayulagappa@email.arizona.edu
